/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "dolittle/timeseries/datatypes/data_point.proto";
import "dolittle/timeseries/datapoints/server/data_point_processor.proto";

package dolittle.timeseries.datapoints.server;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.DataPoints.Grpc.Server";

// Represents the service for working with data point processors that are stream based
service DataPointProcessors {
    rpc Open(DataPointProcessor) returns(stream dolittle.timeseries.datatypes.DataPoint) {}
}