/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "google/protobuf/empty.proto";
import "dolittle/timeseries/datatypes/data_point.proto";

package dolittle.timeseries.datapoints.server;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.DataPoints.Grpc.Server";

// Represents the service for working with data point processors that are stream based
service DataPointStream {
    rpc Open(stream dolittle.timeseries.datatypes.DataPoint) returns(google.protobuf.Empty) {}
}